@@ -30,10 +30,11 @@ public class IntersectionSolver
 	 * @param l1 line 1
 	 * @param l2 line 2
 	 */
-	public IntersectionSolver (Line l1, Line l2)
+	public IntersectionSolver (GeoShape s1, GeoShape s2)
 	{
-		mL1 = l1;
-		mL2 = l2;
+		mS1 = s1;
+		mS2 = s2;
+		mScalars = new ArrayList<Double>();
 		solve();
 	}
 	
@@ -41,18 +42,19 @@ public class IntersectionSolver
 	 * @return position of intersection
 	 * @throws IntersectionSolverException if there is no intersection
 	 */
-	public Position getIntersection() throws IntersectionSolverException
+	public Position getIntersection () throws IntersectionSolverException
 	{
 		if (mSolutionType == Result.INCONSISTENT)
 			throw new IntersectionSolverException ("non solvable linear equations");
 		else if (mSolutionType == Result.INFINITE)
 			throw new IntersectionSolverException ("system has infinite many solutions");
-		DoubleMatrix p = new DoubleMatrix (mL1.getPoints().get(0).getRows(), 1);
-		DoubleMatrix lineVec = mL1.getVectors().get(0);
-		for (int cDim = 0; cDim < p.getRows(); ++cDim)
+		
+		DoubleMatrix p = mS1.getFirst().toDoubleMatrix();
+		ArrayList <DoubleMatrix> vecs = mS1.getVectors();
+		for (int cDim = 0; cDim < mS1.getDimension(); ++cDim)
 		{
-			double val = mL1.getPoints().get(0).getCell(cDim, 0) + mScalar1 * lineVec.getCell(cDim, 0);
-			p.setCell(cDim, 0, val);
+			for (int cVec = 0; cVec < vecs.size(); ++cVec)
+				p.setCell(cDim, 0, p.getCell(cDim, 0) + mScalars.get(cVec) * vecs.get(cVec).getCell(cDim,  0));
 		}
 		return new Position (p.toIntegerMatrix());
 	}
@@ -66,22 +68,19 @@ public class IntersectionSolver
 	
 	public ArrayList<Double> getScalars()
 	{
-		ArrayList <Double> scalars = new ArrayList<Double>();
-		scalars.add (mScalar1);
-		scalars.add (mScalar2);
-		return scalars;
+		return (ArrayList<Double>) mScalars.clone();
 	}
 	
 	
-	public ArrayList <Line> getLines()
+	public ArrayList <GeoShape> getShapes()
 	{
-		ArrayList <Line> lines = new ArrayList<Line>();
-		lines.add (mL1);
-		lines.add (mL2);
-		return lines;
+		ArrayList <GeoShape> shapes = new ArrayList<GeoShape>();
+		shapes.add (mS1);
+		shapes.add (mS2);
+		return shapes;
 	}
 	
-	public boolean isSolutionOnline()
+	public boolean isWithinBounds()
 	{
 		if (mSolutionType == Result.INCONSISTENT)
 			throw new IntersectionSolverException ("non solvable linear equations");
@@ -90,30 +89,31 @@ public class IntersectionSolver
 	
 	private void solve()
 	{
-		DoubleMatrix eq = mL1.loadEquationMatrix(mL2);
+		DoubleMatrix eq = mS1.loadEquationMatrix(mS2);
 		GaussElim solver = new GaussElim(eq);
 		solver.run();
 		if (solver.isConsistent() && solver.allBasicVariables())
 		{
 			mSolutionType = Result.ONE;
-			mScalar1 = solver.getMatrix().getCell(0, solver.getMatrix().getColumns() - 1);
-			mScalar2 = solver.getMatrix().getCell(1, solver.getMatrix().getColumns() - 1);
+			DoubleMatrix solution = solver.getTranslationVector();
+			for (int cVar = 0; cVar < solver.getNumberOfBasicVars(); ++cVar)
+				mScalars.add (solution.getCell(cVar, 0));
 			Position inter = getIntersection();
-			mOnline = mL1.isInRange(inter) && mL2.isInRange(inter);
+			mOnline = mS1.isInRange(inter) && mS2.isInRange(inter);
 		}
 		else if (!solver.isConsistent())
 			mSolutionType = Result.INCONSISTENT;
 		else
 		{
 			mSolutionType = Result.INFINITE;
-			mOnline = mL1.isInRange(new Glue (mL2.getPoints().get(0))) || mL1.isInRange(new Glue (mL2.getPoints().get(1)));
+			
 		}
 		mGelim = solver;
 	}
 	
 	private GaussElim mGelim;
-	private Line mL1, mL2;
-	private Double mScalar1, mScalar2;
+	private GeoShape mS1, mS2;
+	private ArrayList <Double> mScalars;
 	private Result mSolutionType;
 	private boolean mOnline;
 }
